Moved connection to nav bar.

--- a/src/app/i18n/cs/resource.json
+++ b/src/app/i18n/cs/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "",
     "Command failed ({{err}})": "",
     "My Account": "",
-    "Signed in as {{name}}": "",
-    "Account": "Účet",
-    "Sign Out": "Odhlásit se",
     "Options": "Možnosti",
     "Command": "",
     "Show notifications": "",
@@ -20,13 +17,9 @@
     "Sleep": "Režim spánku",
     "Unlock": "Odemknout",
     "Reset": "Resetovat",
-    "Authentication failed.": "",
     "Error": "",
-    "Sign in to {{name}}": "",
     "Username": "Uživatelské jméno",
     "Password": "Heslo",
-    "Sign In": "Přihlásit se",
-    "Forgot your password?": "",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "",
     "Learn more": "Další informace",
     "Downloads": "Stažené soubory",
@@ -114,8 +107,6 @@
     "Off": "Vypnuto",
     "Visualizer Widget": "Widget Vizualizer",
     "This widget visualizes a G-code file and simulates the tool path.": "Tento widget zobrazuje G-code a simuluje cestu nástroje.",
-    "Connection Widget": "Widget Připojení",
-    "This widget lets you establish a connection to a serial port.": "Tento widget umožňuje spojení přes seriové rozhraní.",
     "Console Widget": "Widget Konzole",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "Tento widget umožňuje číst a zapisovat data do CNC controlleru který je připojen pře seriové rozhraní.",
     "Grbl Widget": "Widget Grbl",
@@ -319,9 +310,6 @@
     "Once Every Second": "Jednou za vteřinu",
     "Distance Overshoot: {{overshoot}}x": "Vzdálenost přesazení: {{overshoot}}x",
     "Manufacturer: {{manufacturer}}": "Výrobce: {{manufacturer}}",
-    "Port": "Port",
-    "No ports available": "Nejsou dostupné žádné porty",
-    "Choose a port": "Zvolte port",
     "Refresh": "Obnovit",
     "Baud rate": "Rychlost",
     "Choose a baud rate": "Zvolte rychlost",
@@ -329,7 +317,6 @@
     "Connect automatically": "Automaticky připojit",
     "Open": "Otevřít",
     "Error opening serial port '{{- port}}'": "",
-    "Connection": "Připojení",
     "No serial connection": "",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "",
     "Console": "Seriová konzole",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
