--- a/src/app/i18n/en/resource.json
+++ b/src/app/i18n/en/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "Command succeeded",
     "Command failed ({{err}})": "Command failed ({{err}})",
     "My Account": "My Account",
-    "Signed in as {{name}}": "Signed in as {{name}}",
-    "Account": "Account",
-    "Sign Out": "Sign Out",
     "Options": "Options",
     "Command": "Command",
     "Show notifications": "Show notifications",
@@ -20,13 +17,9 @@
     "Sleep": "Sleep",
     "Unlock": "Unlock",
     "Reset": "Reset",
-    "Authentication failed.": "Authentication failed.",
     "Error": "Error",
-    "Sign in to {{name}}": "Sign in to {{name}}",
     "Username": "Username",
     "Password": "Password",
-    "Sign In": "Sign In",
-    "Forgot your password?": "Forgot your password?",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG",
     "Learn more": "Learn more",
     "Downloads": "Downloads",
@@ -114,8 +107,6 @@
     "Off": "Off",
     "Visualizer Widget": "Visualizer Widget",
     "This widget visualizes a G-code file and simulates the tool path.": "This widget visualizes a G-code file and simulates the tool path.",
-    "Connection Widget": "Connection Widget",
-    "This widget lets you establish a connection to a serial port.": "This widget lets you establish a connection to a serial port.",
     "Console Widget": "Console Widget",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "This widget lets you read and write data to the CNC controller connected to a serial port.",
     "Grbl Widget": "Grbl Widget",
@@ -319,9 +310,6 @@
     "Once Every Second": "Once Every Second",
     "Distance Overshoot: {{overshoot}}x": "Distance Overshoot: {{overshoot}}x",
     "Manufacturer: {{manufacturer}}": "Manufacturer: {{manufacturer}}",
-    "Port": "Port",
-    "No ports available": "No ports available",
-    "Choose a port": "Choose a port",
     "Refresh": "Refresh",
     "Baud rate": "Baud rate",
     "Choose a baud rate": "Choose a baud rate",
@@ -329,7 +317,6 @@
     "Connect automatically": "Connect automatically",
     "Open": "Open",
     "Error opening serial port '{{- port}}'": "Error opening serial port '{{- port}}'",
-    "Connection": "Connection",
     "No serial connection": "No serial connection",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "Connected to {{-port}} with a baud rate of {{baudrate}}",
     "Console": "Console",
@@ -528,5 +515,6 @@
     "Tool Diameter": "Tool Diameter",
     "Probe Z Only": "Probe Z Only",
     "Probe Distance": "Probe Distance",
-    "Error opening port '{{- port}}'": "Error opening port '{{- port}}'"
+    "Disconnected": "Disconnected",
+    "Connected": "Connected"
 }
