--- a/src/app/i18n/es/resource.json
+++ b/src/app/i18n/es/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "Comando exitoso",
     "Command failed ({{err}})": "Comando fallido ({{err}})",
     "My Account": "Mi cuenta",
-    "Signed in as {{name}}": "Conectado como {{name}}",
-    "Account": "Cuenta",
-    "Sign Out": "Cerrar sesión",
     "Options": "Opciones",
     "Command": "Comando",
     "Show notifications": "Mostrar notificaciones",
@@ -20,13 +17,9 @@
     "Sleep": "Suspensión",
     "Unlock": "Desbloquear",
     "Reset": "Resetear",
-    "Authentication failed.": "Fallo de autenticación",
     "Error": "Error",
-    "Sign in to {{name}}": "Conectarse a {{name}}",
     "Username": "Nombre de usuario",
     "Password": "Contraseña",
-    "Sign In": "Iniciar sesión",
-    "Forgot your password?": "Olvido contraseña?",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "Una interfaz web para control de fresado CNC que ejecuta Grbl, Smoothieware o TinyG",
     "Learn more": "Más información",
     "Downloads": "Descargas",
@@ -114,8 +107,6 @@
     "Off": "Desactivado",
     "Visualizer Widget": "Visualizador de widget",
     "This widget visualizes a G-code file and simulates the tool path.": "Este widget permite visualizar el G-code y simula la ruta de la herramienta.",
-    "Connection Widget": "Widget de conexión",
-    "This widget lets you establish a connection to a serial port.": "Este widget permite establecer una conexión con un puerto serie.",
     "Console Widget": "Widget de la consola",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "Este widget permite leer y escribir datos al controlador CNC conectado a un puerto serie.",
     "Grbl Widget": "Grbl Widget",
@@ -319,9 +310,6 @@
     "Once Every Second": "Cada segundo",
     "Distance Overshoot: {{overshoot}}x": "",
     "Manufacturer: {{manufacturer}}": "Fabricante: {{manufacturer}}",
-    "Port": "Puerto",
-    "No ports available": "No hay puertos disponibles",
-    "Choose a port": "Elija un puerto",
     "Refresh": "Actualizar",
     "Baud rate": "Baud rate",
     "Choose a baud rate": "Elija",
@@ -329,7 +317,6 @@
     "Connect automatically": "Conectar automaticamente",
     "Open": "Abrir",
     "Error opening serial port '{{- port}}'": "Error al abrir el puerto serie '{{- port}}'",
-    "Connection": "Conexión",
     "No serial connection": "No hay conexión con el puerto serie",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "Conectado al puerto {{-port}} con un baud rate de {{baudrate}}",
     "Console": "Consola",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
