--- a/src/app/i18n/fr/resource.json
+++ b/src/app/i18n/fr/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "",
     "Command failed ({{err}})": "",
     "My Account": "",
-    "Signed in as {{name}}": "",
-    "Account": "Compte",
-    "Sign Out": "Fermeture de session",
     "Options": "Options",
     "Command": "",
     "Show notifications": "",
@@ -20,13 +17,9 @@
     "Sleep": "Veille",
     "Unlock": "Déverouiller",
     "Reset": "Réinitialiser",
-    "Authentication failed.": "",
     "Error": "",
-    "Sign in to {{name}}": "",
     "Username": "Nom d'utilisateur",
     "Password": "Mot de passe",
-    "Sign In": "Ouverture de session",
-    "Forgot your password?": "",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "",
     "Learn more": "En savoir plus",
     "Downloads": "Téléchargements",
@@ -114,8 +107,6 @@
     "Off": "Non",
     "Visualizer Widget": "Module de visualisation",
     "This widget visualizes a G-code file and simulates the tool path.": "Ce module affiche le ficher G-code et simule le chemin de l'outil.",
-    "Connection Widget": "Module de connexion",
-    "This widget lets you establish a connection to a serial port.": "Ce module vous permet d'établir la connexion au port série.",
     "Console Widget": "Module console",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "Ce module vous permet d'envoyer des commandes au contrôlleur CNC connecté au port série.",
     "Grbl Widget": "Module Grbl",
@@ -319,9 +310,6 @@
     "Once Every Second": "Une fos par seconde",
     "Distance Overshoot: {{overshoot}}x": "Distance de dépassement: {{overshoot}}x",
     "Manufacturer: {{manufacturer}}": "",
-    "Port": "Port",
-    "No ports available": "Aucun port disponible",
-    "Choose a port": "Choisissez un port",
     "Refresh": "Actualiser",
     "Baud rate": "Vitesse de transmission",
     "Choose a baud rate": "Selectionner le 'Baudrate'",
@@ -329,7 +317,6 @@
     "Connect automatically": "Connecter automatiquement",
     "Open": "Ouvrir",
     "Error opening serial port '{{- port}}'": "",
-    "Connection": "Connexion",
     "No serial connection": "",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "",
     "Console": "Console",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
