--- a/src/app/i18n/it/resource.json
+++ b/src/app/i18n/it/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "",
     "Command failed ({{err}})": "",
     "My Account": "",
-    "Signed in as {{name}}": "",
-    "Account": "Account",
-    "Sign Out": "Esci",
     "Options": "Opzioni",
     "Command": "",
     "Show notifications": "",
@@ -20,13 +17,9 @@
     "Sleep": "Sospensione",
     "Unlock": "Sblocca",
     "Reset": "Resetta",
-    "Authentication failed.": "",
     "Error": "",
-    "Sign in to {{name}}": "",
     "Username": "Nome utente",
     "Password": "Password",
-    "Sign In": "Accedi",
-    "Forgot your password?": "",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "",
     "Learn more": "Ulteriori informazioni",
     "Downloads": "Download",
@@ -114,8 +107,6 @@
     "Off": "No",
     "Visualizer Widget": "Visualizza widget",
     "This widget visualizes a G-code file and simulates the tool path.": "Questo widget visualizza un file G-code e simula il percorso utensile.",
-    "Connection Widget": "Widget connettività",
-    "This widget lets you establish a connection to a serial port.": "Questo widget permette di stabilire la connessione ad una porta seriale",
     "Console Widget": "Widget console",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "Questo widget permette di leggere e scrivere dati al controller CNC collegato a una porta seriale.",
     "Grbl Widget": "Widget GRBL",
@@ -319,9 +310,6 @@
     "Once Every Second": "Ogni secondo",
     "Distance Overshoot: {{overshoot}}x": "",
     "Manufacturer: {{manufacturer}}": "",
-    "Port": "Porta",
-    "No ports available": "Nessuna porta disponibile",
-    "Choose a port": "Scegli una porta",
     "Refresh": "Aggiorna",
     "Baud rate": "",
     "Choose a baud rate": "",
@@ -329,7 +317,6 @@
     "Connect automatically": "Connetti automaticamente",
     "Open": "Apri",
     "Error opening serial port '{{- port}}'": "",
-    "Connection": "Connessione",
     "No serial connection": "",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "",
     "Console": "",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
