--- a/src/app/i18n/ja/resource.json
+++ b/src/app/i18n/ja/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "コマンド成功",
     "Command failed ({{err}})": "コマンド失敗 ({{err}})",
     "My Account": "マイアカウント",
-    "Signed in as {{name}}": "{{name}} でサインイン",
-    "Account": "アカウント",
-    "Sign Out": "サインアウト",
     "Options": "オプション",
     "Command": "コマンド",
     "Show notifications": "通知を表示",
@@ -20,13 +17,9 @@
     "Sleep": "スリープ",
     "Unlock": "アンロック",
     "Reset": "リセット",
-    "Authentication failed.": "認証失敗.",
     "Error": "エラー",
-    "Sign in to {{name}}": "{{name}}にサインイン",
     "Username": "ユーザ名",
     "Password": "パスワード",
-    "Sign In": "サインイン",
-    "Forgot your password?": "パスワードを忘れましたか？",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "Grbl, Smoothieware, TinyGをベースとしたCNCフライスコントローラ向けのウェブベースインターフェースです。",
     "Learn more": "詳細情報",
     "Downloads": "ダウンロード",
@@ -114,8 +107,6 @@
     "Off": "オフ",
     "Visualizer Widget": "視覚化 ウィジェット",
     "This widget visualizes a G-code file and simulates the tool path.": "このウィジェットはGコードファイルを視覚化し、ツールパスをシミュレートします。",
-    "Connection Widget": "接続 ウィジェット",
-    "This widget lets you establish a connection to a serial port.": "このウィジェットを使用すると、シリアルポートへ接続できます。",
     "Console Widget": "コンソール ウィジェット",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "このウィジェットを使用すると、シリアルポートに接続されたCNCコントローラにデータを送受信することができます。",
     "Grbl Widget": "Grbl ウィジェット",
@@ -319,9 +310,6 @@
     "Once Every Second": "1回/秒",
     "Distance Overshoot: {{overshoot}}x": "オーバーシュート距離: {{overshoot}}x",
     "Manufacturer: {{manufacturer}}": "メーカー: {{manufacturer}}",
-    "Port": "ポート",
-    "No ports available": "ポートが見つかりません",
-    "Choose a port": "ポートを選択",
     "Refresh": "表示更新",
     "Baud rate": "ボーレート",
     "Choose a baud rate": "ボーレートを選択",
@@ -329,7 +317,6 @@
     "Connect automatically": "自動的に接続",
     "Open": "開く",
     "Error opening serial port '{{- port}}'": "シリアルポート '{{- port}}' を開くのに失敗しました",
-    "Connection": "接続",
     "No serial connection": "シリアル接続がありません。",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "{{-port}} にボーレート {{baudrate}} で接続中",
     "Console": "コンソール",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
