--- a/src/app/i18n/nl/resource.json
+++ b/src/app/i18n/nl/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "Commando succesvol",
     "Command failed ({{err}})": "Commando mislukt ({{err}})",
     "My Account": "Mijn Account",
-    "Signed in as {{name}}": "Ingelogd als {{name}}",
-    "Account": "Account",
-    "Sign Out": "Afmelden",
     "Options": "Opties",
     "Command": "Commando",
     "Show notifications": "Toon meldingen",
@@ -20,13 +17,9 @@
     "Sleep": "Slapen",
     "Unlock": "Ontgrendelen",
     "Reset": "Reset",
-    "Authentication failed.": "Authenticatie mislukt",
     "Error": "Fout",
-    "Sign in to {{name}}": "Log in naar {{name}}",
     "Username": "Gebruikersnaam",
     "Password": "Wachtwoord",
-    "Sign In": "Log in",
-    "Forgot your password?": "Uw wachtwoord vergeten?",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "Een op een web browser gebaseerde interface voor CNC frees besturing welke draait op, Grbl, Smoothieware of TinyG",
     "Learn more": "Meer weten?",
     "Downloads": "Downloads",
@@ -114,8 +107,6 @@
     "Off": "Uit",
     "Visualizer Widget": "Visualiseer Widget",
     "This widget visualizes a G-code file and simulates the tool path.": "Deze widget visualiseert een G-code bestand en simuleert het pad van het gereedscap",
-    "Connection Widget": "Verbindings Widget",
-    "This widget lets you establish a connection to a serial port.": "Deze widget laat U een verbinding maken met een seriële poort",
     "Console Widget": "Console Widget",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "Deze widget laat U data lezen en schrijven naar de CNC controller die is verbonden met de seriële poort.",
     "Grbl Widget": "Grbl Widget",
@@ -319,9 +310,6 @@
     "Once Every Second": "Eens Elke Seconde",
     "Distance Overshoot: {{overshoot}}x": "Overschiet Afstand: {{overshoot}}x",
     "Manufacturer: {{manufacturer}}": "Producent: {{manufacturer}}",
-    "Port": "Poort",
-    "No ports available": "Geen poorten beschikbaar",
-    "Choose a port": "Kies een poort",
     "Refresh": "Ververs",
     "Baud rate": "Verbindingssnelheid",
     "Choose a baud rate": "Kies een verbindingssnelheid",
@@ -329,7 +317,6 @@
     "Connect automatically": "Verbind automatisch",
     "Open": "Open",
     "Error opening serial port '{{- port}}'": "Fout bij openen seriële poort",
-    "Connection": "Verbinding",
     "No serial connection": "Geen seriële verbinding",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "Verbind met {{-port}} met een verbindingssnelheid van {{baudrate}}",
     "Console": "Console",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
