--- a/src/app/i18n/ru/resource.json
+++ b/src/app/i18n/ru/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "",
     "Command failed ({{err}})": "",
     "My Account": "",
-    "Signed in as {{name}}": "",
-    "Account": "Учётная запись",
-    "Sign Out": "Выход",
     "Options": "Настройки",
     "Command": "",
     "Show notifications": "",
@@ -20,13 +17,9 @@
     "Sleep": "Сон",
     "Unlock": "Разблокировать",
     "Reset": "Сброс",
-    "Authentication failed.": "",
     "Error": "",
-    "Sign in to {{name}}": "",
     "Username": "Имя пользователя",
     "Password": "Пароль",
-    "Sign In": "Вход",
-    "Forgot your password?": "",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "",
     "Learn more": "Подробнее",
     "Downloads": "Загрузки",
@@ -114,8 +107,6 @@
     "Off": "Выкл.",
     "Visualizer Widget": "Виджет визуализации",
     "This widget visualizes a G-code file and simulates the tool path.": "Этот виджет отрисовывает G-код и показывает симуляцию инструментов.",
-    "Connection Widget": "Виджет подключения",
-    "This widget lets you establish a connection to a serial port.": "Этот виджет позволяет установить подключение по последовательному порту.",
     "Console Widget": "Виджет консоли",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "Этот виджет позволяет читать и записывать данные в ЧПУ контроллер, подключенный к последовательному порту.",
     "Grbl Widget": "Виджет Grbl",
@@ -319,9 +310,6 @@
     "Once Every Second": "Один раз в секунду",
     "Distance Overshoot: {{overshoot}}x": "Перелет расстояния: {{overshoot}}x",
     "Manufacturer: {{manufacturer}}": "Производитель: {{manufacturer}}",
-    "Port": "Порт",
-    "No ports available": "Нет доступных портов",
-    "Choose a port": "Выберите порт",
     "Refresh": "Обновить",
     "Baud rate": "Скорость передачи (baud rate)",
     "Choose a baud rate": "Выберите скорость (baud rate)",
@@ -329,7 +317,6 @@
     "Connect automatically": "Подключать автоматически",
     "Open": "Открыть",
     "Error opening serial port '{{- port}}'": "",
-    "Connection": "Подключение",
     "No serial connection": "",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "",
     "Console": "Консоль",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
