--- a/src/app/i18n/tr/resource.json
+++ b/src/app/i18n/tr/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "Komut Geçerli",
     "Command failed ({{err}})": "Komut yanlış ({{err}})",
     "My Account": "Hesabım",
-    "Signed in as {{name}}": "olarak giriş yapıldı {{name}}",
-    "Account": "Hesap",
-    "Sign Out": "Oturumu Kapat",
     "Options": "Seçenekler",
     "Command": "Komut",
     "Show notifications": "Bildirimleri Göster",
@@ -20,13 +17,9 @@
     "Sleep": "Uyku",
     "Unlock": "Kilidi Aç",
     "Reset": "Sıfırla",
-    "Authentication failed.": "Kimlik Doğrulama Başarısız",
     "Error": "Hata",
-    "Sign in to {{name}}": "Giriş yap {{name}}",
     "Username": "Kullanıcı adı",
     "Password": "şifre",
-    "Sign In": "Giriş",
-    "Forgot your password?": "Parolanızı mı unuttunuz?",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "Grbl, Smoothieware veya TinyG'yi çalıştıran CNC freze kontrolörü için web tabanlı bir arayüz",
     "Learn more": "Daha fazla",
     "Downloads": "İndir",
@@ -114,8 +107,6 @@
     "Off": "Kapat",
     "Visualizer Widget": "Görselleştirme pencere öğesi",
     "This widget visualizes a G-code file and simulates the tool path.": "Bu pencere öğesi bir G-kodu dosyasını görselleştirir ve takım yolunu taklit eder.",
-    "Connection Widget": "Bağlantı pencere öğesi",
-    "This widget lets you establish a connection to a serial port.": "Bu pencere öğesi, bir seri porta bağlantı kurmanızı sağlar.",
     "Console Widget": "Konsol pencere öğesi",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "Bu pencere öğesi, bir seri porta bağlı CNC cihazından veri okumanızı ve yazmanızı sağlar.",
     "Grbl Widget": "Grbl pencere öğesi",
@@ -319,9 +310,6 @@
     "Once Every Second": "Her Saniyede Bir",
     "Distance Overshoot: {{overshoot}}x": "Mesafeyi ileriye at: {{overshoot}}x",
     "Manufacturer: {{manufacturer}}": "Üretici firma: {{manufacturer}}",
-    "Port": "Port",
-    "No ports available": "Bağlantı noktası yok",
-    "Choose a port": "Bir port seçin",
     "Refresh": "Yenile",
     "Baud rate": "Band hızı",
     "Choose a baud rate": "Bir band hızı seçin",
@@ -329,7 +317,6 @@
     "Connect automatically": "Otomatik bağlan",
     "Open": "Aç",
     "Error opening serial port '{{- port}}'": "Seri bağlantı noktası açılırken hata oluştu '{{- port}}'",
-    "Connection": "Bağlantı",
     "No serial connection": "Seri bağlantı yok",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "Şuna Bağlan {{-port}} bir band hızı ile {{baudrate}}",
     "Console": "Konsol",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
