--- a/src/app/i18n/zh-tw/resource.json
+++ b/src/app/i18n/zh-tw/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "命令成功",
     "Command failed ({{err}})": "命令失敗 ({{err}})",
     "My Account": "我的帳戶",
-    "Signed in as {{name}}": "以 {{name}} 身份登入",
-    "Account": "帳號",
-    "Sign Out": "登出",
     "Options": "選項",
     "Command": "命令",
     "Show notifications": "顯示通知",
@@ -20,13 +17,9 @@
     "Sleep": "睡眠",
     "Unlock": "解除鎖定",
     "Reset": "重置",
-    "Authentication failed.": "認證失敗",
     "Error": "",
-    "Sign in to {{name}}": "登入 {{name}}",
     "Username": "使用者名稱",
     "Password": "密碼",
-    "Sign In": "登入",
-    "Forgot your password?": "忘記密碼？",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "運行Grbl，Smoothieware或TinyG等CNC銑床控制器的網頁操作介面",
     "Learn more": "深入瞭解",
     "Downloads": "下載",
@@ -114,8 +107,6 @@
     "Off": "關閉",
     "Visualizer Widget": "視覺化元件",
     "This widget visualizes a G-code file and simulates the tool path.": "這個元件可用來視覺化 G-code 和模擬刀具路徑等功能。",
-    "Connection Widget": "連線元件",
-    "This widget lets you establish a connection to a serial port.": "這個元件可用來建立序列埠連線。",
     "Console Widget": "控制台元件",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "這個元件可讀寫序列埠資料至連線的CNC控制器。",
     "Grbl Widget": "Grbl元件",
@@ -319,9 +310,6 @@
     "Once Every Second": "每秒1次",
     "Distance Overshoot: {{overshoot}}x": "超調量距離：{{overshoot}}x",
     "Manufacturer: {{manufacturer}}": "製造商：{{manufacturer}}",
-    "Port": "序列埠",
-    "No ports available": "找不到可用的序列埠",
-    "Choose a port": "選擇序列埠",
     "Refresh": "重新整理",
     "Baud rate": "鮑率",
     "Choose a baud rate": "選擇鮑率",
@@ -329,7 +317,6 @@
     "Connect automatically": "自動連線",
     "Open": "開啟",
     "Error opening serial port '{{- port}}'": "",
-    "Connection": "連線",
     "No serial connection": "",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "",
     "Console": "控制台",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
