--- a/src/app/i18n/de/resource.json
+++ b/src/app/i18n/de/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "Kommando erfolgreich ausgeführt",
     "Command failed ({{err}})": "Kommando fehlgeschlagen ({{err}})",
     "My Account": "Mein Konto",
-    "Signed in as {{name}}": "Eingeloggt als {{name}}",
-    "Account": "Konto",
-    "Sign Out": "Abmelden",
     "Options": "Optionen",
     "Command": "Kommando",
     "Show notifications": "Zeige Benachrichtigungen",
@@ -20,13 +17,9 @@
     "Sleep": "Ruhezustand",
     "Unlock": "Freigabe",
     "Reset": "Reset",
-    "Authentication failed.": "Authentifizierung fehlgeschlagen",
     "Error": "Fehler",
-    "Sign in to {{name}}": "Einloggen in {{name}}",
     "Username": "Benutzername",
     "Password": "Kennwort",
-    "Sign In": "Anmelden",
-    "Forgot your password?": "Passwort vergessen?",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "Eine web-basierte Oberfläche für CNC-Fräsen-Steuerungen die mit Grbl, Smoothieware or TinyG laufen",
     "Learn more": "Weitere Informationen",
     "Downloads": "Downloads",
@@ -114,8 +107,6 @@
     "Off": "Aus",
     "Visualizer Widget": "Visualisierungs-Widget",
     "This widget visualizes a G-code file and simulates the tool path.": "Dieses Widget visualisiert eine G-Code-Datei und simuliert den Fahrweg des Werkzeugs.",
-    "Connection Widget": "Verbindungs-Widget",
-    "This widget lets you establish a connection to a serial port.": "Dieses Widget dient zur Herstellung der seriellen Verbindung.",
     "Console Widget": "Konsolen-Widget",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "Mit diesem Widget können Daten über die serielle Schnittstelle mit der CNC-Steuerung ausgetauscht werden.",
     "Grbl Widget": "Grbl-Widget",
@@ -319,9 +310,6 @@
     "Once Every Second": "1x pro Sekunde",
     "Distance Overshoot: {{overshoot}}x": "Abstandsüberschreitung: {{overshoot}}x",
     "Manufacturer: {{manufacturer}}": "Hersteller: {{manufacturer}}",
-    "Port": "Schnittstelle",
-    "No ports available": "Keine Schnittstelle verfügbar",
-    "Choose a port": "Schnittstelle wählen",
     "Refresh": "Aktualisieren",
     "Baud rate": "Baudrate",
     "Choose a baud rate": "Baudrate wählen",
@@ -329,7 +317,6 @@
     "Connect automatically": "Automatisch verbinden",
     "Open": "Öffnen",
     "Error opening serial port '{{- port}}'": "Fehler beim Öffnen des seriellen Ports '{{- port}}'",
-    "Connection": "Verbindung",
     "No serial connection": "Keine serielle Verbindung",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "Verbunden mit dem seriellen Port {{-port}} mit einer Baud-Rate von {{baudrate}}",
     "Console": "Konsole",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
