--- a/src/app/i18n/hu/resource.json
+++ b/src/app/i18n/hu/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "Parancs Sikeres",
     "Command failed ({{err}})": "Parancs Sikertelen ({{err}})",
     "My Account": "Én fiókom",
-    "Signed in as {{name}}": "Bejelentkezés {{name}}",
-    "Account": "Felhasználó",
-    "Sign Out": "Kijelentkezés",
     "Options": "Beállítások",
     "Command": "Parancs",
     "Show notifications": "Értesítések megjelenítése",
@@ -20,13 +17,9 @@
     "Sleep": "Alvás",
     "Unlock": "Feloldás",
     "Reset": "Reset",
-    "Authentication failed.": "A hitelesítés sikertelen.",
     "Error": "",
-    "Sign in to {{name}}": "Bejelentkezés a {{name}}-be",
     "Username": "Felhasználó",
     "Password": "Jelszó",
-    "Sign In": "Bejelentkezés",
-    "Forgot your password?": "Elfelejtetted a jelszavad?",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "Web-alapú felület CNC vezérlő: Grbl, Smoothieware, TinyG",
     "Learn more": "További információ",
     "Downloads": "Letöltés",
@@ -114,8 +107,6 @@
     "Off": "Ki",
     "Visualizer Widget": "Megjelenítés widget",
     "This widget visualizes a G-code file and simulates the tool path.": "Ez a widget megjeleníti a G-kód fájlt és szimulálja a szerszám pályáját.",
-    "Connection Widget": "Csatlakozás Widget",
-    "This widget lets you establish a connection to a serial port.": "Ez a widget segítségével kapcsolatot hozhat létre a soros porton.",
     "Console Widget": "Konzol Widget",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "Ennek a widgetnek segítségével írni és olvasni lehet az adatokat a CNC vezérlőről a soros porton keresztűl.",
     "Grbl Widget": "Grbl Widget",
@@ -319,9 +310,6 @@
     "Once Every Second": "Másodpercenként egyszer",
     "Distance Overshoot: {{overshoot}}x": "Túllőtt távolság: {{overshoot}}x",
     "Manufacturer: {{manufacturer}}": "Gyártó: {{manufacturer}}",
-    "Port": "Port",
-    "No ports available": "Nincs elérhető port",
-    "Choose a port": "Válasszon egy portot",
     "Refresh": "Frissítés",
     "Baud rate": "Átviteli sebesség",
     "Choose a baud rate": "Átviteli sebesség választás",
@@ -329,7 +317,6 @@
     "Connect automatically": "Automatikus csatlakozás",
     "Open": "Csatlakozás",
     "Error opening serial port '{{- port}}'": "",
-    "Connection": "Kapcsolat",
     "No serial connection": "",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "",
     "Console": "Konzol",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
