--- a/src/app/i18n/pt-br/resource.json
+++ b/src/app/i18n/pt-br/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "Comando executado",
     "Command failed ({{err}})": "Comando falhou ({{err}})",
     "My Account": "Minha Conta",
-    "Signed in as {{name}}": "Entrou como {{name}}",
-    "Account": "Conta",
-    "Sign Out": "Sair",
     "Options": "Opções",
     "Command": "Comando",
     "Show notifications": "Mostrar notificações",
@@ -20,13 +17,9 @@
     "Sleep": "Suspender",
     "Unlock": "Desbloquear",
     "Reset": "Reiniciar",
-    "Authentication failed.": "Autenticação falhou",
     "Error": "Erro",
-    "Sign in to {{name}}": "Entrar como {{name}}",
     "Username": "Nome de Usuário",
     "Password": "Senha",
-    "Sign In": "Entrar",
-    "Forgot your password?": "Esqueceu sua senha?",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "Uma interface baseada na web para controlador de fresagem CNC executando Grbl, Smoothieware ou TinyG",
     "Learn more": "Saiba mais",
     "Downloads": "Downloads",
@@ -114,8 +107,6 @@
     "Off": "Desativado",
     "Visualizer Widget": "Módulo Visualizar",
     "This widget visualizes a G-code file and simulates the tool path.": "Este Módulo visualiza um arquivo G-code e simula a trajetória da ferramenta.",
-    "Connection Widget": "Módulo Conexão",
-    "This widget lets you establish a connection to a serial port.": "Este Módulo permite estabelecer uma conexão com uma porta serial.",
     "Console Widget": "Módulo Console",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "Este Módulo permite ler e gravar dados para o controlador CNC conectado a uma porta serial.",
     "Grbl Widget": "Módulo Grbl",
@@ -319,9 +310,6 @@
     "Once Every Second": "Uma vez por segundo",
     "Distance Overshoot: {{overshoot}}x": "Distância de passagem: {{overshoot}}x",
     "Manufacturer: {{manufacturer}}": "Fabricante: {{fabricante}}",
-    "Port": "Porta",
-    "No ports available": "Não há portas disponíveis",
-    "Choose a port": "Escolha uma porta",
     "Refresh": "Atualizar",
     "Baud rate": "Taxa de transmissão",
     "Choose a baud rate": "Escolha uma taxa de transmissão (baud rate)",
@@ -329,7 +317,6 @@
     "Connect automatically": "Conectar automaticamente",
     "Open": "Abrir",
     "Error opening serial port '{{- port}}'": "Erro abrindo porta serial '{{- port}}'",
-    "Connection": "Conexão",
     "No serial connection": "Nenhuma conexão serial",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "Conectado à porta {{-port}} com taxa de transferência de {{baudrate}}",
     "Console": "Console",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
