--- a/src/app/i18n/zh-cn/resource.json
+++ b/src/app/i18n/zh-cn/resource.json
@@ -6,9 +6,6 @@
     "Command succeeded": "命令执行成功",
     "Command failed ({{err}})": "命令执行失败({{err}})",
     "My Account": "我的账号",
-    "Signed in as {{name}}": "登录账号{{name}}",
-    "Account": "帐户",
-    "Sign Out": "注销",
     "Options": "选项",
     "Command": "命名",
     "Show notifications": "显示通知",
@@ -20,13 +17,9 @@
     "Sleep": "睡眠",
     "Unlock": "解除锁定",
     "Reset": "重置",
-    "Authentication failed.": "授权失败。",
     "Error": "错误",
-    "Sign in to {{name}}": "已登录用户{{name}}",
     "Username": "用户名",
     "Password": "密码",
-    "Sign In": "登录",
-    "Forgot your password?": "忘记密码？",
     "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "这是一款基于web图形化CNC雕刻机控制器，适用于Grbl，Smoothieware或TinyG等开源固件。",
     "Learn more": "了解详情",
     "Downloads": "下载",
@@ -114,8 +107,6 @@
     "Off": "关闭",
     "Visualizer Widget": "可视化组件",
     "This widget visualizes a G-code file and simulates the tool path.": "此组件可形象化 G-code 文档以及模拟刀具路径。",
-    "Connection Widget": "连接组件",
-    "This widget lets you establish a connection to a serial port.": "此组件可让您建立系列端口的连接",
     "Console Widget": "控制台组件",
     "This widget lets you read and write data to the CNC controller connected to a serial port.": "此组件可以对连接到系列端口的 CNC 控制器进行数据读写。",
     "Grbl Widget": "Grbl 组件",
@@ -319,9 +310,6 @@
     "Once Every Second": "每秒 1 次",
     "Distance Overshoot: {{overshoot}}x": "超调量距离：{{overshoot}}x",
     "Manufacturer: {{manufacturer}}": "制造商：{{manufacturer}} ",
-    "Port": "端口",
-    "No ports available": "无可用端口",
-    "Choose a port": "选择端口",
     "Refresh": "刷新",
     "Baud rate": "波特率",
     "Choose a baud rate": "选择波特率",
@@ -329,7 +317,6 @@
     "Connect automatically": "自动连接",
     "Open": "打开",
     "Error opening serial port '{{- port}}'": "打开端口'{{- port}}'失败",
-    "Connection": "连接",
     "No serial connection": "无连接端口",
     "Connected to {{-port}} with a baud rate of {{baudrate}}": "已连接端口{{-port}}，波特率{{baudrate}}",
     "Console": "控制台",
@@ -528,5 +515,6 @@
     "Tool Diameter": "",
     "Probe Z Only": "",
     "Probe Distance": "",
-    "Error opening port '{{- port}}'": ""
+    "Disconnected": "",
+    "Connected": ""
 }
