--- a/src/app/i18n/en/controller.json
+++ b/src/app/i18n/en/controller.json
@@ -53,6 +53,7 @@
             "homing": "Homing",
             "probing": "Probing",
             "alarm": "Alarm",
+            "estop": "Emergency Stop",
             "check": "Check"
         }
     }
