--- a/src/app/i18n/nl/resource.json
+++ b/src/app/i18n/nl/resource.json
@@ -20,7 +20,6 @@
     "Error": "Fout",
     "Username": "Gebruikersnaam",
     "Password": "Wachtwoord",
-    "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "Een op een web browser gebaseerde interface voor CNC frees besturing welke draait op, Grbl, Smoothieware of TinyG",
     "Learn more": "Meer weten?",
     "Downloads": "Downloads",
     "Checking for updates...": "Zoeken naar nieuwe updates...",
@@ -516,5 +515,6 @@
     "Probe Z Only": "",
     "Probe Distance": "",
     "Disconnected": "",
-    "Connected": ""
+    "Connected": "",
+    "A web-based interface for CNC milling controller running Swordfish": ""
 }
