--- a/src/app/i18n/cs/resource.json
+++ b/src/app/i18n/cs/resource.json
@@ -20,7 +20,6 @@
     "Error": "",
     "Username": "Uživatelské jméno",
     "Password": "Heslo",
-    "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "",
     "Learn more": "Další informace",
     "Downloads": "Stažené soubory",
     "Checking for updates...": "Vyhledávají se aktualizace...",
@@ -516,5 +515,6 @@
     "Probe Z Only": "",
     "Probe Distance": "",
     "Disconnected": "",
-    "Connected": ""
+    "Connected": "",
+    "A web-based interface for CNC milling controller running Swordfish": ""
 }
