--- a/src/app/i18n/es/resource.json
+++ b/src/app/i18n/es/resource.json
@@ -20,7 +20,6 @@
     "Error": "Error",
     "Username": "Nombre de usuario",
     "Password": "Contraseña",
-    "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "Una interfaz web para control de fresado CNC que ejecuta Grbl, Smoothieware o TinyG",
     "Learn more": "Más información",
     "Downloads": "Descargas",
     "Checking for updates...": "Buscando actualizaciones...",
@@ -516,5 +515,6 @@
     "Probe Z Only": "",
     "Probe Distance": "",
     "Disconnected": "",
-    "Connected": ""
+    "Connected": "",
+    "A web-based interface for CNC milling controller running Swordfish": ""
 }
