--- a/src/app/i18n/it/resource.json
+++ b/src/app/i18n/it/resource.json
@@ -20,7 +20,6 @@
     "Error": "",
     "Username": "Nome utente",
     "Password": "Password",
-    "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "",
     "Learn more": "Ulteriori informazioni",
     "Downloads": "Download",
     "Checking for updates...": "Ricerca di aggiornamenti in corso...",
@@ -516,5 +515,6 @@
     "Probe Z Only": "",
     "Probe Distance": "",
     "Disconnected": "",
-    "Connected": ""
+    "Connected": "",
+    "A web-based interface for CNC milling controller running Swordfish": ""
 }
