--- a/src/app/i18n/ja/resource.json
+++ b/src/app/i18n/ja/resource.json
@@ -20,7 +20,6 @@
     "Error": "エラー",
     "Username": "ユーザ名",
     "Password": "パスワード",
-    "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "Grbl, Smoothieware, TinyGをベースとしたCNCフライスコントローラ向けのウェブベースインターフェースです。",
     "Learn more": "詳細情報",
     "Downloads": "ダウンロード",
     "Checking for updates...": "更新プログラムを確認しています...",
@@ -516,5 +515,6 @@
     "Probe Z Only": "",
     "Probe Distance": "",
     "Disconnected": "",
-    "Connected": ""
+    "Connected": "",
+    "A web-based interface for CNC milling controller running Swordfish": ""
 }
