--- a/src/app/i18n/ru/resource.json
+++ b/src/app/i18n/ru/resource.json
@@ -20,7 +20,6 @@
     "Error": "",
     "Username": "Имя пользователя",
     "Password": "Пароль",
-    "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "",
     "Learn more": "Подробнее",
     "Downloads": "Загрузки",
     "Checking for updates...": "Проверка наличия обновлений...",
@@ -516,5 +515,6 @@
     "Probe Z Only": "",
     "Probe Distance": "",
     "Disconnected": "",
-    "Connected": ""
+    "Connected": "",
+    "A web-based interface for CNC milling controller running Swordfish": ""
 }
