--- a/src/app/i18n/zh-tw/resource.json
+++ b/src/app/i18n/zh-tw/resource.json
@@ -20,7 +20,6 @@
     "Error": "",
     "Username": "使用者名稱",
     "Password": "密碼",
-    "A web-based interface for CNC milling controller running Grbl, Smoothieware, or TinyG": "運行Grbl，Smoothieware或TinyG等CNC銑床控制器的網頁操作介面",
     "Learn more": "深入瞭解",
     "Downloads": "下載",
     "Checking for updates...": "正在檢查更新項目...",
@@ -516,5 +515,6 @@
     "Probe Z Only": "",
     "Probe Distance": "",
     "Disconnected": "",
-    "Connected": ""
+    "Connected": "",
+    "A web-based interface for CNC milling controller running Swordfish": ""
 }
