Add a "Spindle Ramping" status message.

--- a/src/app/i18n/en/controller.json
+++ b/src/app/i18n/en/controller.json
@@ -54,7 +54,8 @@
             "probing": "Probing",
             "alarm": "Alarm",
             "estop": "Emergency Stop",
-            "check": "Check"
+            "check": "Check",
+            "spindleRamping": "Spindle Ramping"
         }
     }
 }
