--- a/src/app/i18n/en/resource.json
+++ b/src/app/i18n/en/resource.json
@@ -557,5 +557,6 @@
     "One or more of your post processors is out of date and requires updating. Outdated post processors will not be supported unless explicitly recommended.": "One or more of your post processors is out of date and requires updating. Outdated post processors will not be supported unless explicitly recommended.",
     "Install": "Install",
     "Post Processor": "Post Processor",
-    "Post Version": "Post Version"
+    "Post Version": "Post Version",
+    "Probe Thickness": "Probe Thickness"
 }
